--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
   <script>
     // ---- Customize this ----
-    const girlfriendName = "Haba";
+    const girlfriendName = "Haba Ali Kashmiri";
     // ------------------------
 
     document.getElementById("herName").textContent = girlfriendName;
