--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <body>
   <!-- ✅ UPDATED: playsinline helps on iOS -->
   <audio id="bgMusic" loop preload="auto" playsinline>
-    <source src="./chalo-door.mp3" type="audio/mpeg">
+    <source src="./chalo-door1.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
