--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       console.log("✅ Audio loaded and ready:", bgMusic.currentSrc);
     });
     bgMusic.addEventListener("error", () => {
-      console.log("❌ Audio error. Check that chalo-door.mp3 is in the same folder as this HTML.");
+      console.log("❌ Audio error. Check that chalo-doorFINAL.mp3 is in the same folder as this HTML.");
     });
 
     function popConfetti(){
