--- a/index.html
+++ b/index.html
@@ -230,10 +230,11 @@
   </main>
 
   <script>
-    const girlfriendName = "Haba Ali Kashmiri";
+    const badgeName = "Haba";
+    const fullName = "Haba Ali Kashmiri";
 
-    document.getElementById("herName").textContent = girlfriendName;
-    document.getElementById("titleName").textContent = girlfriendName;
+    document.getElementById("herName").textContent = badgeName;
+    document.getElementById("titleName").textContent = fullName;
 
     const yesBtn = document.getElementById("yesBtn");
     const noBtn = document.getElementById("noBtn");
