--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
     }
     *{box-sizing:border-box}
     body{
-      margin:0;
+           margin:0;
       min-height:100vh;
       display:flex;
       align-items:center;
       justify-content:center;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
       color:var(--text);
-      background:#ffe4e9;
+    
+      background-color: #ffe4e9;
+      background-image:
+        url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath fill='%23ff9fb3' fill-opacity='0.35' d='M12 21s-6.7-4.35-9.33-7.01C.9 12.23 0 10.55 0 8.7 0 5.58 2.42 3 5.5 3c1.74 0 3.41.81 4.5 2.09C11.09 3.81 12.76 3 14.5 3 17.58 3 20 5.58 20 8.7c0 1.85-.9 3.53-2.67 5.29C18.7 16.65 12 21 12 21z'/%3E%3C/svg%3E");
+      background-repeat: repeat;
+      background-size: 32px 32px;
     }
 
     .hearts{
