--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <div class="badge">💌 For <span class="name" id="herName">my love</span></div>
 
     <h1>Will you be my Valentine, <span id="titleName">Haba Ali Kashmiri</span>? ❤️</h1>
-    <p>I don't need valentines day to express my love to you but you are the best thing that has happened to me. I love you &lt;3</p>
+    <p>I don't need valentines day to express my love to you but you are the best thing that has happened to me. I love you, my forever valentine &lt;3</p>
 
     <div class="buttons" id="buttonsArea">
       <button class="yes" id="yesBtn">Yes! 😘</button>
